force-app/main/default/objects/BalanceAdjustmentCreditParams__mdt/BalanceAdjustmentCreditParams__mdt.object-meta.xml
<CustomObject>
    <description>Metadado criado para parametrização de credito para a jornada de ajuste de saldo - Ressarcimento - Bl 15 Jornada 65 [Erik, Lucas, Gustavo]</description>
    <label>Parametrização Ajuste Saldo - Crédito</label>
    <pluralLabel>Parametrizações Ajuste Saldo - Credito</pluralLabel>
</CustomObject>