force-app/main/default/objects/BalanceAdjustmentCreditParams__mdt/fields/Permissao__c.field-meta.xml
<CustomField>
    <fullName>Permissao__c</fullName>
    <label>Permissão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
                <default>true</default>
                <label>Valor Credito Aberto</label>
            </value>
            <value>
                <fullName>Selecao</fullName>
                <label>Valor Credito Selecao</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>