force-app/main/default/objects/BalanceAdjustmentCreditParams__mdt/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <label>Unidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R$</fullName>
                <default>true</default>
                <label>R$</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>Kb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>