force-app/main/default/objects/BalanceAdjustmentCreditParams__mdt/fields/Validade__c.field-meta.xml
<CustomField>
    <fullName>Validade__c</fullName>
    <label>Validade</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>