force-app/main/default/objects/BalanceAdjustmentCreditParams__mdt/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>